networking/ingress/payment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: critical
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/default-backend: http-default-backend
spec:
    rules:
    - http:
       paths:
       - backend:
           service:
             name: pay-service
             port:
               number: 8282
         path: /pay
         pathType: ImplementationSpecific
