networking/ingress/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: app-ingress
   namespace: app-space
   annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /
       nginx.ingress.kubernetes.io/default-backend: http-default-backend
spec:
   rules:
   - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 8080
        path: /wear
        pathType: ImplementationSpecific
      - backend:
          service:
            name: video-service
            port: 
              number: 8080
        path: /watch
        pathType: ImplementationSpecific
