networking/ingress/web-app-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-app-ingress
spec:
  rules:
    - host: my-web-app.example.com
      http:
        paths:
          - path: /new-app
            pathType: Prefix
            backend:
              service:
                name: my-web-app
                port:
                  number: 80
        pathRewrite:
          - path: ^/app
            replacement: /new-app
